# ragmake

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  benchmark.py  benchmark_core.py  benchmark_corpus.py  benchmark_types.py  chunking.py  compiler.py  defaults.py  demo.py  interfaces.py  models.py  pyproject.toml  runtime.py  session.py  storage.py
.github/workflows/: ci.yml
adapters/: __init__.py  azure_ai_search.py  azure_blob.py  openai_embedder.py  pgvector_backend.py  sqlite_backend.py
docs/: reference.md
tests/: test_benchmark.py  test_incremental_ingest.py
